force-app/main/default/objects/Loan_Fee__c/fields/Amount_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Reimbursed__c</fullName>
    <description>Amount of the Fee that was reimbursed</description>
    <label>Amount Reimbursed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>