force-app/main/default/objects/Loan_Fee__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Deal associated with this fee</description>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>