force-app/main/default/objects/Loan_Fee__c/fields/Deal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Deal Contact</label>
    <referenceTo>Deal_Contact__c</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>