force-app/main/default/objects/Loan_Fee__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>The Amount of this Fee</description>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>