force-app/main/default/objects/Loan_Fee__c/fields/Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Fee_Status__c</fullName>
    <description>Status of this Fee</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
                <default>true</default>
                <label>Unpaid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>