force-app/main/default/objects/Loan_Fee__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>Type of Loan Fee</description>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Extension Fee</fullName>
            </value>
            <value>
                <fullName>Legal Fee</fullName>
            </value>
            <value>
                <fullName>Servicer Fee</fullName>
            </value>
            <value>
                <fullName>Title Fee</fullName>
            </value>
            <value>
                <fullName>Valuation Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>