force-app/main/default/objects/Loan_Fee__c/fields/Loan_Modification__c.field-meta.xml
<CustomField>
    <fullName>Loan_Modification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Modification</label>
    <referenceTo>Loan_Modification__c</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>