force-app/main/default/objects/Loan_Fee__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property that this Fee is related to</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>