force-app/main/default/objects/Loan_Fee__c/fields/Property_Extension__c.field-meta.xml
<CustomField>
    <fullName>Property_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Extension</label>
    <referenceTo>Property_Extension__c</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <type>Lookup</type>
</CustomField>