force-app/main/default/objects/Loan_Fee__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference Number for this Fee</description>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>