force-app/main/default/objects/Loan_Fee__c/fields/Vendor_Type__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Type__c</fullName>
    <description>The Type of Vendor for this Loan Fee</description>
    <label>Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Title Review</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Insurance Premium</fullName>
            </value>
            <value>
                <fullName>Insurance Review</fullName>
            </value>
            <value>
                <fullName>Lender Diligence</fullName>
            </value>
            <value>
                <fullName>Lender Legal Counsel</fullName>
            </value>
            <value>
                <fullName>LexisNexis Risk Solutions</fullName>
            </value>
            <value>
                <fullName>MISC</fullName>
            </value>
            <value>
                <fullName>PCA &amp; ESA</fullName>
            </value>
            <value>
                <fullName>Post Closing Holdback</fullName>
            </value>
            <value>
                <fullName>Servicer</fullName>
            </value>
            <value>
                <fullName>Tax Verification</fullName>
            </value>
            <value>
                <fullName>Title and Escrow</fullName>
            </value>
            <value>
                <fullName>Title Review</fullName>
            </value>
            <value>
                <fullName>Valuations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>